--- a/Animal_Land.html
+++ b/Animal_Land.html
@@ -39,11 +39,11 @@
 		albino Peacock
 	</div>
 		<div class="Animals">
-		<a href="https://youtu.be/gpZvjYONYFg"><img src="images\Pbl13.jpg" alt="Pbl13"><br></a>
+		<a href="https://youtu.be/gpZvjYONYFg"><img src="Pbl13.jpg" alt="Pbl13"><br></a>
 		Roadrunner
 	</div>
 	<div class="Animals">
-		<a href="https://youtu.be/O5f-4h7L5ts"><img src="images\Pbl14.jpg" alt="Pbl14"><br></a>
+		<a href="https://youtu.be/O5f-4h7L5ts"><img src="Pbl14.jpg" alt="Pbl14"><br></a>
 		Panda
 	</div>
 	<div class="Animals">
